Fix: tiles, etc. canvases too big

--- a/app/stylesheets/index.css
+++ b/app/stylesheets/index.css
@@ -129,8 +129,8 @@ button:disabled {
 
 canvas.tiles, canvas.arrow, canvas.rot-anim, canvas.rubber-band {
     position: absolute;
-    width: 100vw;
-    height: 100vw;
+    width: 100%;
+    height: 100%;
 }
 
 #load-screen {
